# iws

./: .dockerignore  .gitignore  .vscode  AGENTS.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.trae/rules/: handle-erorrs-rule.md  ui-components-rule.md
docker/: .env.example  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml
docker/initdb/: 01-extensions.sql
docker/postgres/: Dockerfile
docs/: 01-项目概览.md  02-系统架构.md  03-本地开发.md  04-Docker部署.md  05-配置说明.md  06-权限模型.md  07-OA同步.md  08-文件处理与检索.md  09-上线检查清单.md  README.md  产品PRD.md  样例-Next.js帮助文档.md  样例-产品PRD.md  样例-技术方案.md  样例-文档检索方案.md  检索接口文档.md  用户、部门、项目.md  系统周报系统介绍文档.md  项目建设周报素材-上线与迁移.md
docs/_legacy_refactor_docs/: 功能清单与规划.md  目标架构.md  迁移进度.md  重构设计方案.md
file-worker/: .env.example  Dockerfile  README.md  pyproject.toml
file-worker/src/iws_file_worker/: config.py  embedding.py  main.py  models.py  paddleocr.py  parse.py  preview.py  processor.py  repository.py  storage.py
file-worker/tests/: test_parse_pdf_batches.py
legacy-migration/: .env.example  .gitignore  README.md
legacy-migration/src/: config.mjs  copy-local-storage-files.mjs  db.mjs  enqueue-file-processing.mjs  inspect.mjs  migrate-all.mjs  storage.mjs
src/: proxy.ts
src/actions/: notifications.action.ts  project-files.action.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
supabase/: cmd.sh  config.toml
web/: .env.example  Dockerfile  docker-entrypoint.sh  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+629 files in other folders)
