[project]
name = "iws-file-worker"
version = "0.1.0"
description = "Background worker for IWS file preview processing"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0",
  "openpyxl>=3.1.5",
  "psycopg[binary]>=3.2.3",
  "pypdf>=6.0.0",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "xlrd>=2.0.1",
]

[project.scripts]
iws-file-worker = "iws_file_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iws_file_worker"]
